@@ -79,6 +79,7 @@ CVS HEAD:
    * new [random] representation as list allows complex scenarios to be saved
      (forum thread 5659)
    * better diagnostics on parsing: file inclusion sequence
+   * added [scroll_to] (patch #3388, forum thread 3235)
  * editor improvements:
    * fixed editor file chooser when starting directory has many files (#11698)
    * made the starting position in editor start at player 1 (#10625)
